src/test/ui/generic-associated-types/issue-90014.stderr
error[E0477]: the type `&mut ()` does not fulfill the required lifetime
  --> $DIR/issue-90014.rs:13:20
   |
LL |     type Fut<'a> where Self: 'a;
   |     ------------ definition of `Fut` from trait
...
LL |     type Fut<'a> = impl Future<Output = ()>;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^- help: try copying this clause from the trait: `where Self: 'a`
   |
note: type must outlive the lifetime `'a` as defined here
  --> $DIR/issue-90014.rs:13:14
   |
LL |     type Fut<'a> = impl Future<Output = ()>;
   |              ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0477`.
